--- a/744Project/Views/Stores/Create.cshtml
+++ b/744Project/Views/Stores/Create.cshtml
@@ -17,13 +17,15 @@
                     <h4>Store</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
+                    
+                    
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.storeID, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.storeID, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.storeIP, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -50,20 +52,20 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.relayID, "relayID", htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.relayID, "Relay", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownList("relayID", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.relayID, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.regionID, "regionID", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownList("regionID", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.regionID, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
