Completed Sprint Task# 72 1. All validations work successfully. 2. Everything has been tested in my local database.

--- a/744Project/Views/Relays/Index.cshtml
+++ b/744Project/Views/Relays/Index.cshtml
@@ -57,9 +57,9 @@
                             @Html.DisplayFor(modelItem => item.isActive)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.relayID }) |
+                            @*@Html.ActionLink("Edit", "Edit", new { id = item.relayID }) |
                             @Html.ActionLink("Details", "Details", new { id = item.relayID }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.relayID })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.relayID })*@
                         </td>
                     </tr>
                 }
