--- a/744Project/Views/Stores/Index.cshtml
+++ b/744Project/Views/Stores/Index.cshtml
@@ -51,9 +51,9 @@
                             @Html.DisplayFor(modelItem => item.storeWeight)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.storeID }) |
+                            @*@Html.ActionLink("Edit", "Edit", new { id = item.storeID }) |
                             @Html.ActionLink("Details", "Details", new { id = item.storeID }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.storeID })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.storeID })*@
                         </td>
                     </tr>
                 }
