--- a/744Project/Views/EditNetwork/Index.cshtml
+++ b/744Project/Views/EditNetwork/Index.cshtml
@@ -11,23 +11,23 @@
             <h2>Choose from the options below to edit:</h2>
             @*Create new Region:*@
             <h3>
-                <a href="../Regions"> Regions </a>
+                <a href="../Regions"> View and Add Regions </a>
             </h3>
             @*Create new Relay:*@
             <h3>
-                <a href="../Relays"> Relays </a>
+                <a href="../Relays"> View and Add Relays </a>
             </h3>
             @*Create new Store:*@
             <h3>
-                <a href="../Stores"> Stores </a>
+                <a href="../Stores"> View and Add Stores </a>
             </h3>
             @*Create new Connection:*@
             <h3>
-                <a href="../Connections"> Connections </a>
+                <a href="../Connections/Create"> Modify Connections </a>
             </h3>
             @*Change a queue limit:*@
             <h3>
-                <a href="../Queues"> Queues </a>
+                <a href="../Queues"> Modify Queues </a>
             </h3>
 
         </div>
